--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </tr>
                   </thead>
                   <tbody id="mlab-row">
-                    
+
                   </tbody>
                 </table>
               </div>
@@ -76,8 +76,30 @@
   <script src="assets/js/app-tables-datatables.js" type="text/javascript"></script>
   <script type="text/javascript">
     $(document).ready(function () {
-      //App.init();
-      App.dataTables();
+      // Kết nối dữ liệu mlab
+      let api = "rT_GFFPSlEq7vFifcx-4KOJvOuH2W_nO";
+      let database = "vsyscali1";
+      let collection = "trash";
+      let limit = "1000";
+
+      let mlab = `https://api.mlab.com/api/1/databases/${database}/collections/${collection}?apiKey=${api}&l=${limit}`;
+
+      function convertDate(datetime) {
+        const regex = /^(\d{4})-(\d{2})-(\d{2})T(\d{2}):(\d{2}):(\d{2}).(\d{3})Z$/;
+        const subst = `$3/$2/$1 $4:$5:$6`;
+        return datetime != "" ? datetime.replace(regex, subst) : datetime;
+      }
+
+      $.get(mlab + "&l=1000", (data) => {
+        let row = "";
+
+        data.forEach(d => {
+          row += `<tr class="gradeA"><td>${d.id}</td><td>${convertDate(d.t.$date)}</td><td>${d.c1}</td><td class="center">${d.c2}</td><td class="center">${d.c3}</td><td class="center">${d.c4}</td><td class="center">${d.c5}</td></tr>`;
+        });
+        $("#mlab-row").html(row);
+
+        App.dataTables();
+      });
     });
   </script>
 </body>
