--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+  <link rel="stylesheet" type="text/css" href="assets/lib/datetimepicker/css/bootstrap-datetimepicker.min.css" />
   <link rel="stylesheet" type="text/css" href="assets/lib/datatables/css/dataTables.bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 </head>
@@ -35,9 +36,52 @@
           <div class="col-sm-12">
             <div class="panel panel-default panel-table">
               <div class="panel-heading">Báo cáo
-                <div class="tools"><span class="icon mdi mdi-download"></span><span class="icon mdi mdi-more-vert"></span></div>
+                <div class="tools">
+                  <span class="icon mdi mdi-more-vert"></span></div>
               </div>
               <div class="panel-body">
+                <div class="row dropdown-showcase" style="padding: 0 5px">
+                  <div class="col-sm-2">
+                    <div class="input-group input-group-sm" style="margin-top: 5px">
+                      <span class="input-group-addon">Giới hạn</span>
+                      <input id="in-limit" type="text" class="form-control" value="50">
+                    </div>
+                  </div>
+
+                  <div class="col-sm-2">
+                    <div class="input-group input-group-sm" style="margin-top: 5px">
+                      <span class="input-group-addon">Số dòng</span>
+                      <input id="" type="text" class="form-control" value="8">
+                    </div>
+                  </div>
+
+                  <div class="col-sm-2">
+                    <div class="input-group input-group-sm">
+                      <div data-min-view="2" data-date-format="dd/mm/yyyy" class="input-group date datetimepicker">
+                        <input size="16" type="text" value="" class="form-control" placeholder="Từ ngày"><span class="input-group-addon btn btn-primary"><i
+                            class="icon-th mdi mdi-calendar"></i></span>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-2">
+                    <div class="input-group input-group-sm">
+                      <div data-min-view="2" data-date-format="dd/mm/yyyy" class="input-group date datetimepicker">
+                        <input size="16" type="text" value="" class="form-control" placeholder="Đến ngày"><span class="input-group-addon btn btn-primary"><i
+                            class="icon-th mdi mdi-calendar"></i></span>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-2">
+                    <input id="" type="text" class="form-control" style="margin-top: 5px" placeholder="Lọc">
+                  </div>
+
+                  <div class="col-sm-2">
+                    <button class="btn btn-primary hover" style="margin-top: 5px; height: 38px; width: 100%;"><i class="icon icon-left mdi mdi-cloud-download"></i> Áp dụng</button>
+                  </div>
+
+                </div>
                 <table id="table-mlab" class="table table-striped table-hover table-fw-widget">
                   <thead>
                     <tr>
@@ -73,6 +117,7 @@
   <script src="assets/lib/datatables/plugins/buttons/js/buttons.print.js" type="text/javascript"></script>
   <script src="assets/lib/datatables/plugins/buttons/js/buttons.colVis.js" type="text/javascript"></script>
   <script src="assets/lib/datatables/plugins/buttons/js/buttons.bootstrap.js" type="text/javascript"></script>
+  <script src="assets/lib/datetimepicker/js/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
   <script src="assets/js/app-tables-datatables.js" type="text/javascript"></script>
   <script type="text/javascript">
     $(document).ready(function () {
@@ -80,9 +125,11 @@
       let api = "rT_GFFPSlEq7vFifcx-4KOJvOuH2W_nO";
       let database = "vsyscali1";
       let collection = "trash";
-      let limit = "1000";
+      let limit = "50";
 
-      let mlab = `https://api.mlab.com/api/1/databases/${database}/collections/${collection}?apiKey=${api}&l=${limit}`;
+      let mlab = function () {
+        return `https://api.mlab.com/api/1/databases/${database}/collections/${collection}?apiKey=${api}&l=${limit}`;
+      };
 
       function convertDate(datetime) {
         const regex = /^(\d{4})-(\d{2})-(\d{2})T(\d{2}):(\d{2}):(\d{2}).(\d{3})Z$/;
@@ -90,16 +137,56 @@
         return datetime != "" ? datetime.replace(regex, subst) : datetime;
       }
 
-      $.get(mlab + "&l=1000", (data) => {
-        let row = "";
+      function getData() {
+        $.get(mlab(), (data) => {
+          data.forEach(d => {
+            tb.fnAddData([d.id, convertDate(d.t.$date), d.c1, d.c2, d.c3, d.c4, d.c5]);
+          });
+        });
+      }
+
+      var tb = $("#table-mlab").dataTable({
+        pageLength: 8,
+        dom: "<'row be-datatable-body'<'col-sm-12'tr>>" +
+          "<'row be-datatable-footer'<'col-sm-5'i><'col-sm-7'p>>"
+      });
+
+      $(".datetimepicker").datetimepicker({
+        autoclose: true,
+        componentIcon: '.mdi.mdi-calendar',
+        navIcons: {
+          rightIcon: 'mdi mdi-chevron-right',
+          leftIcon: 'mdi mdi-chevron-left'
+        }
+      });
+
+      $.get(mlab(), (data) => {
+        $.extend(true, $.fn.dataTable.defaults, {
+          dom:
+            "<'row be-datatable-header'<'col-sm-6'l><'col-sm-6'f>>" +
+            "<'row be-datatable-body'<'col-sm-12'tr>>" +
+            "<'row be-datatable-footer'<'col-sm-5'i><'col-sm-7'p>>"
+        });
 
         data.forEach(d => {
-          row += `<tr class="gradeA"><td>${d.id}</td><td>${convertDate(d.t.$date)}</td><td>${d.c1}</td><td class="center">${d.c2}</td><td class="center">${d.c3}</td><td class="center">${d.c4}</td><td class="center">${d.c5}</td></tr>`;
+          tb.fnAddData([d.id, convertDate(d.t.$date), d.c1, d.c2, d.c3, d.c4, d.c5]);
         });
-        $("#mlab-row").html(row);
-
-        App.dataTables();
       });
+
+      $("#in-limit").keydown((e) => {
+        if (e.keyCode == 13) {
+          limit = $("#in-limit").val();
+          console.log(limit);
+          if (!isNaN(limit)) {
+            tb.fnClearTable();
+            getData();
+          }
+          else {
+            alert("Giới hạn phải là số");
+          }
+        }
+      });
+
     });
   </script>
 </body>
