--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   <link rel="stylesheet" type="text/css" href="assets/lib/datetimepicker/css/bootstrap-datetimepicker.min.css" />
-  <link rel="stylesheet" type="text/css" href="assets/lib/datatables/css/dataTables.bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="assets/lib/datatable2/css/dataTables.bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 </head>
 
@@ -51,7 +51,7 @@
                   <div class="col-sm-2">
                     <div class="input-group input-group-sm" style="margin-top: 5px">
                       <span class="input-group-addon">Số dòng</span>
-                      <input id="" type="text" class="form-control" value="8">
+                      <input id="in-page-length" type="text" class="form-control" value="8">
                     </div>
                   </div>
 
@@ -78,7 +78,8 @@
                   </div>
 
                   <div class="col-sm-2">
-                    <button class="btn btn-primary hover" style="margin-top: 5px; height: 38px; width: 100%;"><i class="icon icon-left mdi mdi-cloud-download"></i> Áp dụng</button>
+                    <button class="btn btn-primary hover" style="margin-top: 5px; height: 38px; width: 100%;"><i class="icon icon-left mdi mdi-cloud-download"></i>
+                      Áp dụng</button>
                   </div>
 
                 </div>
@@ -109,14 +110,8 @@
   <script src="assets/lib/jquery/jquery.min.js" type="text/javascript"></script>
   <script src="assets/lib/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
   <script src="assets/js/main.min.js"></script>
-  <script src="assets/lib/datatables/js/jquery.dataTables.min.js" type="text/javascript"></script>
-  <script src="assets/lib/datatables/js/dataTables.bootstrap.min.js" type="text/javascript"></script>
-  <script src="assets/lib/datatables/plugins/buttons/js/dataTables.buttons.js" type="text/javascript"></script>
-  <script src="assets/lib/datatables/plugins/buttons/js/buttons.html5.js" type="text/javascript"></script>
-  <script src="assets/lib/datatables/plugins/buttons/js/buttons.flash.js" type="text/javascript"></script>
-  <script src="assets/lib/datatables/plugins/buttons/js/buttons.print.js" type="text/javascript"></script>
-  <script src="assets/lib/datatables/plugins/buttons/js/buttons.colVis.js" type="text/javascript"></script>
-  <script src="assets/lib/datatables/plugins/buttons/js/buttons.bootstrap.js" type="text/javascript"></script>
+  <script src="assets/lib/datatable2/js/jquery.dataTables.min.js" type="text/javascript"></script>
+  <script src="assets/lib/datatable2/js/dataTables.bootstrap.min.js" type="text/javascript"></script>
   <script src="assets/lib/datetimepicker/js/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
   <script src="assets/js/app-tables-datatables.js" type="text/javascript"></script>
   <script type="text/javascript">
@@ -183,6 +178,21 @@
           }
           else {
             alert("Giới hạn phải là số");
+          }
+        }
+      });
+
+      $("#in-page-length").keydown((e) => {
+        if (e.keyCode == 13) {
+          limit = $("#in-page-length").val();
+          if (!isNaN(limit)) {
+            let p = Number.parseInt(limit);
+            //console.log(p);
+            let a = $("#table-mlab").DataTable();
+            a.page.len(p).draw();
+          }
+          else {
+            alert("Số trang phải là số");
           }
         }
       });
